RegressionTests/TestSuiteExport/reject/inline_asm_invalid_direct_operand.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidDirectOperand

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, 1
    };
}
